Correction projet, excès de variables

--- a/templates/equipement/accueil.html.twig
+++ b/templates/equipement/accueil.html.twig
@@ -12,7 +12,7 @@
 
 		<br></br>
 
-		<div><a href="{{path('allequipement')}}" class="btn btn-primary" > Aller à la page des équipements </a></div>
+		<div><a href="{{path('allequipement')}}" class="btn btn-primary" > Aller à la page des <b>équipements </b></a></div>
     	</div>
 
 {% endblock %}
