--- a/templates/equipement/description.html.twig
+++ b/templates/equipement/description.html.twig
@@ -4,14 +4,14 @@
 
 	<div class="d-flex flex-column align-items-center">
 		<div class="d-flex justify-content-between" style="width:100%;">
-			<div><h2><a href="{{path('allequipement')}}" class="btn btn-primary" > Aller à la page des équipements </a></h2></div>
+			<div><h2><a href="{{path('allequipement')}}" class="btn btn-primary" > Retourner à la page des <b>équipements</b></a></h2></div>
 
-			<div><h2><a href="{{path('equipement')}}" class="btn btn-primary" > Retourner à la page de formulaire </a></h2></div>
+			<div><h2><a href="{{path('equipement')}}" class="btn btn-primary" > Retourner à la page de <b>formulaire</b></a></h2></div>
 		</div>
 
 		<br></br>
 
-		<div><h2> Tableau des équipements de Football <h2></div>
+		<div><h2> Infos sur l'équipements n°{{description.id}} de Football<h2></div>
 
 		<div>
 			<table class="table">
@@ -33,7 +33,7 @@
 					<td>{{description.marque}}</td>
 					<td>{{description.prix}}</td>
 					<td>{{description.quantite}}</td>
-					<td>{{description.description}}</td>
+					<td style="max-width:450px;">{{description.description}}</td>
 				</tr>
 				
 				</tbody>
