--- a/templates/equipement/allequipement.html.twig
+++ b/templates/equipement/allequipement.html.twig
@@ -3,7 +3,13 @@
 {% block  body %}
 
 	<div class="d-flex flex-column align-items-center">
-		<div><h2><a href="{{path('equipement')}}" class="btn btn-primary" > Retourner à la page de formulaire </a></h2></div>
+
+		<div class="d-flex justify-content-end" style="width:100%;">
+			<div><h2><a href="{{path('equipement')}}" class="btn btn-primary" > Retourner à la page de <b>formulaire </b></a></h2></div>
+		</div>
+
+		<br></br>
+
 		<div><h2> Tableau des équipements de Football <h2></div>
 
 
@@ -11,20 +17,20 @@
 				<tbody>
 					<thread>
 						<tr>
-							<th scope="col">Id</th>
 							<th scope="col">Nom</th>
 							<th scope="col">Quantité</th>
 							<th scope="col">Infos équipement</th>
 						</tr>
 					</thread>
-				<tr>
-				{% for object in allequipement %}
-					<th scope="row">{{object.id}}</th>
-					<td>{{object.nom}}</td>
-					<td>{{object.quantite}}</td>
-					<td><a href={{path('description_show', {id: object.id}) }} class="btn btn-primary" role="button">infos supplémentaires</a></td>
-				</tr>
-				{% endfor %}
+				
+					{% for object in allequipement %}
+						<tr>
+							<th scope="row">{{object.nom}}</th>
+							<td>{{object.quantite}}</td>
+							<td><a href={{path('description_show', {id: object.id}) }} class="btn btn-primary" role="button"><b>infos supplémentaires</b></a></td>
+						</tr>
+					{% endfor %}
+
 				</tbody>
 			</table>
 		</div>
